# 07-taotie

./: Cargo.toml  README.md  cliff.toml  deny.toml
examples/: ndjson.rs  pq.rs
notebooks/: pyproject.toml  taotie.ipynb
src/: lib.rs
src/backend/: data_fusion.rs
src/backend/fusion/: describe.rs  df_describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  sql.rs
