[package]
name = "taotie"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
arrow = { version = "53.1.0", features = ["prettyprint"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
datafusion = { version = "42.1.0", features = ["serde"] }
dirs = "5.0.1"
enum_dispatch = "0.3.13"
oneshot = "0.1.8"
parquet = "53.1.0"
polars = { version = "0.43.1", features = ["lazy", "parquet", "sql", "timezones"] }
reedline-repl-rs = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
